geoblocking, pasv response address, basic odbc auth

--- a/samples/TestFtpServer/appsettings.json
+++ b/samples/TestFtpServer/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Serilog": {
-    "Using":  ["Serilog.Sinks.Console"],
-    "MinimumLevel":{
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
       "Default": "Debug",
       "Override": {
         "Microsoft": "Information",
@@ -9,18 +9,26 @@
         "FubarDev.FtpServer.CommandHandlers.MlstCommandHandler": "Verbose"
       }
     },
-     "WriteTo": [
+    "WriteTo": [
       {
         "Name": "Console",
         "OutputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {ConnectionId} {Message:lj}{NewLine}{Exception}"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "ftp-.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
       }
     ],
-    "Enrich": ["FromLogContext"]
+    "Enrich": [ "FromLogContext" ]
   },
 
   /* Supported authentication types are: "custom","anonymous", "pam", "default".
    * "default" means "not set" and is equal to "anonymous". */
-  "authentication": "default",
+  "authentication": "custom",
 
   /* Sets the user id and group id for file system operations when
    * authentication is "pam" and "backend" is "unix". */
@@ -35,10 +43,27 @@
     "noAccountManagement": false
   },
 
+  "custom": {
+    /*
+    A simple db is all thats required. table users, two varchar rows user_name user_password (bcrypt)
+    */
+    "connectionString": "DSN=provider",
+    /* Custom multi-line banner */
+    "banner": [ "MyBanner", "message" ]
+  },
+
+  "geoip": {
+    /* Path to geoip mmdb */
+    "dbPath": "C:\\build\\test.mmdb",
+    /* Country codes to allow (or deny if allowMode false) */
+    "countryCodes": [ "US" ],
+    "allowMode": true
+  },
+
   /* Generic server settings */
   "server": {
     /* supported special addresses: "0.0.0.0", "::", "*" */
-    "address": null,
+    "address": "*",
     /* defaults to 21 or 990 (when implicit AUTH TLS is active) */
     "port": null,
     /* Set to true to bind active data connections to FTP-DATA (port-1) */
